--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,20 @@ services:
     environment:
         - PORT=3001
     command: npm start
+    depends_on:
+      - db
+
+  db:
+    image: postgres:13
+    environment:
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
+        POSTGRES_DB: database
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
+volumes:
+  db-data:
+    driver: local
