--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: '3.8'
 
 services:
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+
+
   backend:
     build:
       context: expressBackend
@@ -12,6 +24,7 @@ services:
     command: npm start
     depends_on:
       - db
+
 
   db:
     image: postgres:13
